fixed: layout issues and header/footer sticky | added: users component

--- a/src/app/components/layout/layout.component.css
+++ b/src/app/components/layout/layout.component.css
@@ -1,21 +1,3 @@
-.app-wrapper {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh; /* Ensure full viewport height */
-  }
-  
-  .app-main {
-    flex: 1; /* Pushes the footer to the bottom */
-  }
-  
-  .app-footer {
-    width: 100%;
-    max-width: 100vw;
-    min-height: 3rem;
-    padding: 1rem;
-    color: var(--bs-secondary-color);
-    background-color: var(--bs-body-bg);
-    border-top: 1px solid var(--bs-border-color);
-    transition: 0.3s ease-in-out;
-  }
-  
+main {
+  margin-top: 56px; /* Adjust this according to navbar height */
+}
